--- a/main.css
+++ b/main.css
@@ -194,8 +194,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #e6f331;
-  background-image: linear-gradient(to top, #e6f331, #e6f331);
+  background-color: #9D00FF;
+  background-image: linear-gradient(to top, #a938f0ab, #9D00FF);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -1840,7 +1840,7 @@ body {
 @keyframes love-burst {
   50%,
   100% {
-    box-shadow: inset 0 0 0 0 rgb(18, 226, 129);
+    box-shadow: inset 0 0 0 0 rgba(197, 19, 241, 0.747);
     -webkit-transform: translate(0, 0) scale(1);
     transform: translate(0, 0) scale(1);
   }
