--- a/main.css
+++ b/main.css
@@ -1970,6 +1970,16 @@ body {
   transform: scale(0.5) rotate(46deg);
 }
 
+.birthdayMessage {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: yellow;
+  font-size: 1.5em;
+}
+
+
 @-webkit-keyframes love {
   50% {
     fill: rgb(253, 66, 19);
